--- a/public/main.html
+++ b/public/main.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html ng-app='ContactsApp'>
+<html ng-app="ContactsApp">
 <head>
     <meta charset="UTF-8">
     <title> Contacts </title>
-    <base href='/'>
+    <base href="/">
 
     <link rel="stylesheet" href="src/bootstrap.min.css">
 
 </head>
 <body>
-    <div class='container'>
+    <div class="container">
         <div class="page-header">
             <h1>Contacts</h1>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12" ng-view></div>
+    </div>
 
-
-    <script src='lib/jquery/dist/jquery.min.js'></script>
-    <script src='lib/bootstrap/dist/js/bootstrap.min.js'></script>
-    <script src='lib/angular/angular.min.js'></script>
-    <script src='src/app.js'></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
