--- a/public/main.html
+++ b/public/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title> Contacts </title>
-    <base href="/">
+    <base href='/'>
 
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="src/bootstrap.min.css">
 
 </head>
@@ -13,15 +14,19 @@
         <div class="page-header">
             <h1>Contacts</h1>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12" ng-view></div>
+        <div class="row">
+            <div class="col-sm-12" ng-view></div>
+        </div>
     </div>
 
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.min.js"></script>
+    <script src='lib/jquery/dist/jquery.min.js'></script>
+    <script src='lib/bootstrap/dist/js/bootstrap.min.js'></script>
+    <script src='lib/angular/angular.min.js'></script>
+    <script src='lib/angular-route/angular-route.min.js'></script>
+    <script src='lib/angular-resource/angular-resource.min.js'></script>
     <script src="src/app.js"></script>
+    <script src="src/controllers.js"></script>
+    <script src="src/factories.js"></script>
+    <script src="src/filter.js"></script>
 </body>
 </html>
