Form Field Finished

--- a/public/main.html
+++ b/public/main.html
@@ -24,9 +24,11 @@
     <script src='lib/angular/angular.min.js'></script>
     <script src='lib/angular-route/angular-route.min.js'></script>
     <script src='lib/angular-resource/angular-resource.min.js'></script>
+    <script src='lib/angular-messages/angular-messages.min.js'></script>
     <script src="src/app.js"></script>
     <script src="src/controllers.js"></script>
     <script src="src/factories.js"></script>
     <script src="src/filter.js"></script>
+    <script src="src/directives.js"></script>
 </body>
 </html>
