Finished implementing the app

--- a/public/main.html
+++ b/public/main.html
@@ -15,6 +15,10 @@
             <h1>Contacts</h1>
         </div>
         <div class="row">
+            <div class="col-sm-12" ng-include="'views/nav.html'"></div>
+        </div>
+
+        <div class="row">
             <div class="col-sm-12" ng-view></div>
         </div>
     </div>
